--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  overflow-x: hidden;
+}
+
 .oswald-600 {
   font-family: "Oswald", sans-serif;
   font-optical-sizing: auto;
